# business-card

./: .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  eslint.config.js  package.json  pyproject.toml
docs/: dev-test-stage-prod.md
src/: index.css  index.html  index.js  project-card.js  slide-indicator.js
src/bcard-exclusive-next/: .gitignore
src/bcard-infrastructure/: .gitignore
src/bcard-misc/: index.css  index.html  index.js  project-card.js  slide-indicator.js
src/bcard-misc/prototypes/card-swap-animate/: index.css  index.html  index.js
src/prototypes/card-swap-animate/: index.css  index.html  index.js
